adding introduction of the project

--- a/credit_risk_Classification_with_Machine_learning.ipynb
+++ b/credit_risk_Classification_with_Machine_learning.ipynb
@@ -55,11 +55,11 @@
    "id": "926f0f31",
    "metadata": {},
    "source": [
-    "## 1.INTRODUCTION\n",
+    "## 1.INTRODUCTION.\n",
     "### Project Overview\n",
     "Why would credit risk assessment be so necessary to a whole finacial industry. Its worth noting that one of the most critical challenges for financial institutions is knowing who to advance a credit to and what type of credit- simply put, a wrong loan to a wrong person is disasater in waiting. \n",
     "Granting loans to risky applicants can lead losses, strained liquidity, reduced investor confidence and even eventual shut down as defaulted loans dont only hurt profitability but also the going concern of a business.\n",
-    "This project is aimed at using historical applicant data i.e Employment length, credit history, loan intent, income et al to predict the likelihood of loan default. By identifying high-risk applicants in advance, lenders can make various informed decisions e.g adjusting interest rates , applying risk mitigation strategies that protect capital while also ensuring credit accessibility. The project can be used also to continually check the outstanding loans' performance and be able to mitigate any impending default that may have developed while the loan is being serviced."
+    "This project is aimed at using historical applicant data i.e Employment length, credit history, loan intent, income et al to predict the likelihood of loan default. By identifying high-risk applicants in advance, lenders can make various informed decisions e.g adjusting interest rates , applying risk mitigation strategies that protect capital while also ensuring credit accessibility. The project can be used also to continually check the outstanding loans' performance and be able to mitigate any impending/imminent default that may have developed while the loan is being serviced."
    ]
   },
   {
