data understanding,loading and importing libraries

--- a/credit_risk_Classification_with_Machine_learning.ipynb
+++ b/credit_risk_Classification_with_Machine_learning.ipynb
@@ -99,15 +99,35 @@
    "cell_type": "markdown",
    "id": "d5aa8d6d",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 2. DATA UNDERSTANDING AND LOADING\n",
+    "The dataset in use was obtained from [kaggle](https://www.kaggle.com/datasets/laotse/credit-risk-dataset) and contains credit applicants' information sourced from a financial institution's loan book. Every record represents an individual who applied for a loan, alongside associated demographice, financial and credit history\n",
+    "\n",
+    "The key feature decriptions:\n",
+    "- **Person_age**: The age of an individual applying for the loan.\n",
+    "- **Person_income**: Annual income of an individual.\n",
+    "- **Person_home_ownership**: The housing status of applicant i.e own, rent or mortgage.\n",
+    "- **Person_emp_length**: Employment period in years.\n",
+    "- **Loan_intent**: The purpose of the loan.\n",
+    "- **Loan_grade**: The assigned credit quality grade.\n",
+    "- **Loan_amnt**:Total amount of loan applied for.\n",
+    "- **Loan_int_rate**: The interest rate offered on the associated loan.\n",
+    "- **Loan_percent_income**: Loan amount as a percentage of income.\n",
+    "- **cb_person_defaul_on_file**: Historical default of the individual as per multiple records e.g credit bureau records (Example being Metropol in Kenya).\n",
+    "- **cb_person_cred_hist_length**: The length of credit history of the individual in years.\n",
+    "- **loan_status**: This is the target variable indicating loan risk i.e 0 being low risk and 1 being high risk\n",
+    "\n",
+    "This historical record of loan applicants thats has behavioural, financial habits and creditworthiness includes both institutional risk metrics and personal attributes which will help in identification of patterns associated with loan default. Morever the insights are fundametal for building predictive models that will support responsible lending and ultimately reduce finacial risk."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "aa25fe4d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import necessary libraries\n",
     "import pandas as pd\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
