started modelling and evaluation

--- a/credit_risk_Classification_with_Machine_learning.ipynb
+++ b/credit_risk_Classification_with_Machine_learning.ipynb
@@ -1118,6 +1118,17 @@
     "sm = SMOTE(random_state=42)\n",
     "X_balanced, y_balanced = sm.fit_resample(X_train, y_train)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49dd3333",
+   "metadata": {},
+   "source": [
+    "## 5. MODELLING AND EVALUATION\n",
+    "For comparison purposes, we will the below models:\n",
+    " 1. **Random Forest**\n",
+    " 2. **Logistic regression**"
+   ]
   }
  ],
  "metadata": {
