completed insights and recommendations

--- a/credit_risk_Classification_with_Machine_learning.ipynb
+++ b/credit_risk_Classification_with_Machine_learning.ipynb
@@ -1474,6 +1474,20 @@
     "| **ROC-AUC Score**    | 0.94                                   | 0.82                                       | RF demonstrates stronger separation and confidence in predictions                       |\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ac8c511",
+   "metadata": {},
+   "source": [
+    "## 7. INSIGHTS AND RECOMENDATIONS\n",
+    "- **Random Forest Model** clearly demonstrates superior performance across all metrics except Recall for defaulters. It's therefore well suited for deployment in automated risk scoring and credit segmentation environment/needs.\n",
+    "- **Logistic Regression Model** largely excells in recall for defaulters, making it appealing when the goal is to catch risky applicants though it may greatly sacrifice precision leading to a higher false positives.\n",
+    "\n",
+    "Recommendations\n",
+    "- **Choose Random Forest** for deployment: With high precision, robust recall and feature transparency, the model is ideal for credit scoring engines which was our main objective.\n",
+    "- **Use Logistic Regression** for regulatory and or audit needs: As it offers fast and interpretable output which valuable in institutions when it comes to compliance and for policy formulation and revies."
+   ]
   }
  ],
  "metadata": {
