--- a/credit_risk_Classification_with_Machine_learning.ipynb
+++ b/credit_risk_Classification_with_Machine_learning.ipynb
@@ -1486,7 +1486,7 @@
     "\n",
     "Recommendations\n",
     "- **Choose Random Forest** for deployment: With high precision, robust recall and feature transparency, the model is ideal for credit scoring engines which was our main objective.\n",
-    "- **Use Logistic Regression** for regulatory and or audit needs: As it offers fast and interpretable output which valuable in institutions when it comes to compliance and for policy formulation and revies."
+    "- **Use Logistic Regression** for regulatory and or audit needs: As it offers fast and interpretable output which valuable in institutions when it comes to compliance and for policy formulation and reviews."
    ]
   }
  ],
