modified image url

--- a/credit_risk_Classification_with_Machine_learning.ipynb
+++ b/credit_risk_Classification_with_Machine_learning.ipynb
@@ -8,7 +8,7 @@
     "   **CREDIT RISK CLASSIFICATION WITH MACHINE LEARNING**\n",
     "\n",
     "\n",
-    "![Alt text](Photos\\Credit-Risk.jpg)"
+    "![Alt text](Photos/Credit-Risk.jpg)"
    ]
   },
   {
